--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "commander": "^8.3.0",
     "file-easy": "^1.0.3",
     "fs": "^0.0.1-security",
+    "handlebars": "^4.7.7",
     "path": "^0.12.7"
   }
 }
